src/main/java/com/example/jokerexamples/horizontal/bad/service/DecisionService.java
package com.example.jokerexamples.horizontal.bad.service;

import org.springframework.stereotype.Service;

/**
 * Просто блок имитирующий бизнес логику приложения
 */
@Service
public class DecisionService {

    public void doSomeLogic(){

    }
}
